bugfix unreadable navigation

--- a/src/variables.css
+++ b/src/variables.css
@@ -1,7 +1,7 @@
 :root {
   --color-text: #653945;
-  --color-text-light: #e3809b;
-  --color-text-light--2: #ca728a;
+  --color-text-light: #ca728a;
+  --color-text-light--2: #975567;
 
   --color-text-hover: #975567;
 
